remove visible recording label / add missing formatted string / fix recording icon

--- a/bigbluebutton-html5/imports/ui/components/nav-bar/recording-indicator/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/recording-indicator/styles.scss
@@ -1,5 +1,10 @@
 @import "../../../stylesheets/variables/_all";
 
+:root {
+  --recording-indicator-md: .5rem;
+  --recording-indicator-sm: -.25rem;
+}
+
 %baseIndicator {
   position: relative;
   display: inline-block;
@@ -10,13 +15,13 @@
 
   &:after {
     content: '';
-    width: var(--font-size-base) / 2;
-    height: var(--font-size-base) / 2;
+    width: var(--recording-indicator-md);
+    height: var(--recording-indicator-md);
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -(var(--font-size-base) / 4);
-    margin-left: -(var(--font-size-base) / 4);
+    margin-top: var(--recording-indicator-sm);
+    margin-left: var(--recording-indicator-sm);
     border-radius: 50%;
     background-color: var(--color-danger);
   }
